--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "src/components/units/boardComment/list/BoardCommentList.container.js", "src/components/units/boardComment/list/BoardCommentList.presenter.js", "src/components/units/boardComment/list/BoardCommentList.queries.js", "src/components/units/boardComment/list/BoardCommentList.styles.js"  ],
   "exclude": [
     "node_modules"
   ]
