--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "generate": "graphql-codegen"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
     "@apollo/client": "^3.7.7",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@material-ui/core": "^4.12.4",
     "@next/font": "13.1.6",
-    "antd": "^5.1.7",
+    "antd": "^5.3.0",
     "axios": "^1.3.2",
     "graphql": "^16.6.0",
     "next": "12.1.0",
@@ -27,6 +28,18 @@
     "@graphql-codegen/typescript": "^3.0.1",
     "@types/node": "17.0.2",
     "@types/react": "17.0.2",
-    "typescript": "^4.9.5"
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "eslint": "^8.0.1",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-config-standard-with-typescript": "^34.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.32.2",
+    "prettier": "2.7.1",
+    "typescript": "*"
+  },
+  "resolutions": {
+    "@types/react": "17.0.2"
   }
 }
