--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,14 +15,6 @@
     "isolatedModules": true,
     "jsx": "preserve"
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    "src/components/units/boardComment/list/BoardCommentList.container.js",
-    "src/components/units/boardComment/list/BoardCommentList.presenter.tsx",
-    "src/components/units/boardComment/list/BoardCommentList.queries.js",
-    "src/components/units/boardComment/list/BoardCommentList.styles.js"
-  ],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
