--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@material-ui/core": "^4.12.4",
+    "@types/react-slick": "^0.23.10",
     "antd": "^5.3.1",
     "axios": "^0.27.2",
     "graphql": "^16.5.0",
