--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-slick": "^0.23.10",
     "antd": "^5.3.1",
     "axios": "^0.27.2",
+    "firebase": "^9.19.1",
     "graphql": "^16.5.0",
     "next": "12.1.0",
     "react": "17.0.2",
@@ -26,7 +27,8 @@
     "react-infinite-scroller": "^1.2.6",
     "react-player": "^2.10.1",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.8.1",
@@ -34,6 +36,7 @@
     "@types/node": "17.0.2",
     "@types/react": "17.0.2",
     "@types/react-infinite-scroller": "^1.2.3",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "eslint": "^8.0.1",
     "eslint-config-next": "12.2.0",
