--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@material-ui/core": "^4.12.4",
     "@types/react-slick": "^0.23.10",
     "antd": "^5.3.1",
+    "apollo-upload-client": "^17.0.0",
     "axios": "^0.27.2",
     "firebase": "^9.19.1",
     "graphql": "^16.5.0",
