--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^2.8.1",
     "@graphql-codegen/typescript": "^2.7.1",
+    "@types/apollo-upload-client": "^17.0.2",
     "@types/node": "17.0.2",
     "@types/react": "17.0.2",
     "@types/react-infinite-scroller": "^1.2.3",
