--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "@emotion/styled": "^11.9.3",
     "@material-ui/core": "^4.12.4",
     "@types/react-slick": "^0.23.10",
-    "antd": "^5.3.1",
+    "antd": "^5.4.2",
     "apollo-upload-client": "^17.0.0",
     "axios": "^0.27.2",
     "firebase": "^9.19.1",
     "graphql": "^16.5.0",
+    "lodash": "^4.17.21",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-daum-postcode": "^3.1.1",
@@ -35,6 +36,7 @@
     "@graphql-codegen/cli": "^2.8.1",
     "@graphql-codegen/typescript": "^2.7.1",
     "@types/apollo-upload-client": "^17.0.2",
+    "@types/lodash": "^4.14.194",
     "@types/node": "17.0.2",
     "@types/react": "17.0.2",
     "@types/react-infinite-scroller": "^1.2.3",
