--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@apollo/client": "^3.6.9",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@hookform/resolvers": "^3.1.0",
     "@material-ui/core": "^4.12.4",
     "@types/react-slick": "^0.23.10",
     "antd": "^5.4.2",
@@ -26,12 +27,14 @@
     "react": "17.0.2",
     "react-daum-postcode": "^3.1.1",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.43.9",
     "react-infinite-scroller": "^1.2.6",
     "react-player": "^2.10.1",
     "react-slick": "^0.29.0",
     "recoil": "^0.7.7",
     "slick-carousel": "^1.8.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.8.1",
