--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-daum-postcode": "^3.1.1",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.43.9",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-infinite-scroller": "^1.2.6",
     "react-player": "^2.10.1",
     "react-quill": "^2.0.0",
