--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.43.9",
     "react-infinite-scroll-component": "^6.1.0",
     "react-infinite-scroller": "^1.2.6",
+    "react-kakao-maps-sdk": "^1.1.9",
     "react-player": "^2.10.1",
     "react-quill": "^2.0.0",
     "react-slick": "^0.29.0",
