--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-kakao-maps-sdk": "^1.1.9",
     "react-player": "^2.10.1",
     "react-quill": "^2.0.0",
+    "react-router-dom": "^6.12.1",
     "react-slick": "^0.29.0",
     "recoil": "^0.7.7",
     "slick-carousel": "^1.8.1",
