--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@hookform/resolvers": "^3.1.0",
     "@material-ui/core": "^4.12.4",
     "@types/react-slick": "^0.23.10",
+    "@types/styled-components": "^5.1.26",
     "antd": "^5.4.2",
     "apollo-upload-client": "^17.0.0",
     "axios": "^0.27.2",
@@ -39,6 +40,7 @@
     "react-slick": "^0.29.0",
     "recoil": "^0.7.7",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^6.0.3",
     "uuid": "^9.0.0",
     "yup": "^1.1.1",
     "zen-observable": "^0.10.0"
